# myshell

./: Makefile.am  README  autoconf.sh  configure.ac
include/: cmd.h
src/: CMakeLists.txt  Makefile.am  base64.c  config.h  context.h  debug.c  debug.h  error.c  intererr.h  json.c  json.h  keyword.h  list.h  loadfunc.c  loadfunc.h  parse.c  parse.h  readjson.c  readjson.h  readxml.c  readxml.h  server.c  urlencode.c  validate.h  xmalloc.c  xmalloc.h
test/: Makefile.am  ipconfig.xml  nas.xml  sys.xml  system.json  test.c
